maybe fixed background on iphone?

--- a/kalbos-vartai/less/scss/custom.scss
+++ b/kalbos-vartai/less/scss/custom.scss
@@ -822,10 +822,7 @@ h1, h2 {
 	.banner-outer {
 
 		.banner-img {
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
-			background-size: cover;
+			background-attachment: scroll;
 		}
 
 		.button {
